dev/test_programs/INVALID/group1/stmt26.go
package main;

func main(){
	var x int;
	x = 1;
	var y int = 2;
	x, y *= 4;
}
